<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_shop_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/add_shop_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_img_header">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_black_18dp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/btn_transparent" />

        <TextView
            android:id="@+id/add_shop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="THÔNG TIN NHÀ PHÂN PHỐI"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black_text_color" />

    </RelativeLayout>

    <TextView
        android:id="@+id/add_shop_expire_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:text="0000"
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/white_text_color"
        android:layout_below="@+id/add_shop_header"
        android:gravity="center"
        android:padding="@dimen/_2sdp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_shop_expire_to">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/add_shop_image_parent"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/bg_white_corner_stroke_grey"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/add_shop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lub_logo_red"
                    android:padding="@dimen/_10sdp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:fontFamily="@font/font_awesome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_edit_pen"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/_5sdp" />

            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(Chọn logo có nền trắng)"
                android:textStyle="italic"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                app:textHint="Tên Nhà Phân Phối"
                app:iconText="@string/icon_username" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"

                app:textHint="Tỉnh / Thành phố"
                app:iconText="@string/icon_district" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                app:textHint="Quận/ Huyện"
                app:iconText="@string/icon_address"
                android:visibility="gone"/>

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                app:textHint="Tên công ty"
                app:iconText="@string/icon_building" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_company_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:textHint="Địa chỉ"
                app:iconText="@string/icon_map" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_company_hotline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:textHint="Hotline"
                app:iconText="@string/icon_phone" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_company_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:textHint="Website"
                app:iconText="@string/icon_global" />

            <com.lubsolution.store.customviews.CInputForm
                android:id="@+id/add_shop_company_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textHint="Lời chào"
                app:iconText="@string/icon_smile" />

            <Button
                android:id="@+id/add_shop_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:minWidth="@dimen/_150sdp"
                android:background="@drawable/btn_confirm_blue"
                android:layout_margin="@dimen/_10sdp"
                android:text="CẬP NHẬT"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/add_shop_admin_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/add_shop_progress"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorBlue"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/add_shop_rvadmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/_5sdp"
                    android:visibility="visible"/>

                <LinearLayout
                    android:id="@+id/add_shop_add_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_round_white_border_grey"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/_40sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_awesome"
                        android:text="@string/icon_plus"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"/>

                    <TextView
                        android:id="@+id/add_shop_add_admin_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tạo quản trị viên"
                        android:textAllCaps="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textColor="@color/black_text_color_hint"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>