<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_edit_product_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/dialog_editadd_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/bg_img_header"
        android:text=""
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black_text_color"
        android:gravity="center"
        android:textAllCaps="true" />

    <LinearLayout
        android:id="@+id/dialog_editadd_body"
        android:layout_below="@+id/dialog_editadd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <wolve.dms.customviews.CInputForm
            android:id="@+id/dialog_editadd_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_30sdp"
            app:iconText="@string/icon_adress" />

        <wolve.dms.customviews.CInputForm
            android:id="@+id/dialog_editadd_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_30sdp"
            app:iconText="@string/icon_street" />

        <wolve.dms.customviews.CInputForm
            android:id="@+id/dialog_editadd_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_30sdp"
            app:iconText="@string/icon_district" />

        <wolve.dms.customviews.CInputForm
            android:id="@+id/dialog_editadd_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_30sdp"
            app:iconText="@string/icon_city" />

        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/view_bottom_dialog_button" />

    </LinearLayout>

</RelativeLayout>