<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.StatisticalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_50sdp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            app:columnCount="2"
            app:rowCount="4"
            app:alignmentMode="alignMargins"
            app:rowOrderPreserved="true"
            app:columnOrderPreserved="true"
            android:layout_marginTop="@dimen/_5sdp">

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_revenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:text="0"
                app:iconText="@string/icon_truck"
                app:layout_columnWeight="1"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_1sdp" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_debt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:textColor="@color/colorRed"
                app:iconText="@string/icon_money"
                app:layout_columnWeight="1" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_cash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:text="0"
                app:iconText="@string/icon_bomb"
                app:textColor="@color/orange"
                app:layout_columnWeight="1"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_1sdp" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_profit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:textColor="@color/colorGreen"
                app:iconText="@string/icon_hand_on_money"
                app:layout_columnWeight="1" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_totalnet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:text="xxx"
                app:iconText="@string/icon_dollar"
                app:textColor="@color/colorAccent"
                app:layout_columnWeight="1"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_1sdp" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:textColor="@color/black_text_color_hint"
                app:titleColor="@color/black_text_color_hint"
                app:text="###"
                app:titleText="###"
                app:iconText="#"
                app:layout_columnWeight="1" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_inventory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:text="0"
                app:iconText="@string/icon_inventory"
                app:textColor="@color/colorGrape"
                app:layout_columnWeight="1"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_1sdp" />

            <wolve.dms.customviews.CVerticalView
                android:id="@+id/statistical_dashboard_base_profit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:textColor="@color/colorAccent"
                app:iconText="@string/icon_hand_on_money"
                app:layout_columnWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <lecho.lib.hellocharts.view.ColumnChartView
                android:id="@+id/statistical_dashboard_income"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:padding="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thống kê chung"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:textColor="@color/colorBlueTransparent" />

        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorGrey"
            android:layout_margin="@dimen/_5sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/statistical_dashboard_district"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:padding="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thống kê khu vực"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:textColor="@color/colorBlueTransparent" />

        </FrameLayout>


        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="@dimen/_5sdp"-->
        <!--            android:layout_marginLeft="@dimen/_5sdp"-->
        <!--            android:layout_marginRight="@dimen/_5sdp"-->
        <!--            android:visibility="gone">-->

        <!--            <lecho.lib.hellocharts.view.PieChartView-->
        <!--                android:id="@+id/statistical_dashboard_bdf"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="@dimen/_130sdp"/>-->
        <!--        </androidx.cardview.widget.CardView>-->


    </LinearLayout>


</ScrollView>